--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install anilist-helper
+        pip install anilist-helper beautifulsoup4
     - name: Delete Previous Cache
       continue-on-error: true
       run: |
