reflect changes of the library

--- a/.github/workflows/conv_cache.yml
+++ b/.github/workflows/conv_cache.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Download cache and extract it to appropriate dir
       shell: bash
       run: |
-        curl -O ${{ vars.CACHE_URL }}
-        unzip cache.zip -d /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/data/
+        curl -o cache.zip ${{ vars.CACHE_URL }}
+        unzip cache.zip -d /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/cache
     - name: Delete Previous Cache
       continue-on-error: true
       run: |
@@ -39,5 +39,5 @@ jobs:
     - name: Save Cache
       uses: actions/cache/save@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/data/cache
+        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/cache
         key: ${{ env.cache-key }}
