--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -16,9 +16,9 @@ jobs:
     env:
       cache-key: python_cache
     steps:
-    - name: Wait 15 sec
+    - name: Wait 30 sec
       shell: bash
-      run: sleep 15
+      run: sleep 30
     - name: Checkout current code
       uses: actions/checkout@v3
     - name: Set up Python
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install anilist-helper beautifulsoup4
+        pip install anilist-helper beautifulsoup4 pynyaasi
     - name: Delete Previous Cache
       continue-on-error: true
       run: |
