--- a/.github/workflows/update_database.yml
+++ b/.github/workflows/update_database.yml
@@ -32,13 +32,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install anilist-helper beautifulsoup4 pynyaasi
+        pip install alfetcher beautifulsoup4 pynyaasi
     - name: Restore AniList Cache
       continue-on-error: false
       id: anilist-restore
       uses: actions/cache/restore@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/cache
+        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/alfetcher/cache
         key: ${{ env.anilist-cache }}
         restore-keys: |
           ${{ env.anilist-cache }}
@@ -74,7 +74,7 @@ jobs:
     - name: Save Cache
       uses: actions/cache/save@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/anilisthelper/cache
+        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/alfetcher/cache
         key: ${{ env.anilist-cache }}
     - name: Check torrent links
       run: python torrent_verification.py
