--- a/.github/workflows/update_database.yml
+++ b/.github/workflows/update_database.yml
@@ -23,11 +23,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+    - name: Determine Python version
+      id: python_version
+      run: |
+        full_version=$(python --version | cut -d' ' -f2)
+        major_version=$(echo $full_version | grep -oE '^[^.]+.[^.]+')
+        echo "::set-output name=full_version::$full_version"
+        echo "::set-output name=major_version::$major_version"
     - name: Restore Python Cache
       id: python-restore
       uses: actions/cache/restore@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages
+        path: /opt/hostedtoolcache/Python/${{ steps.python_version.outputs.full_version }}/x64/lib/python${{ steps.python_version.outputs.major_version }}/site-packages
         key: ${{ env.python-cache }}
     - name: Install dependencies
       run: |
@@ -38,7 +45,7 @@ jobs:
       id: anilist-restore
       uses: actions/cache/restore@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/alfetcher/cache
+        path: /opt/hostedtoolcache/Python/${{ steps.python_version.outputs.full_version }}/x64/lib/python${{ steps.python_version.outputs.major_version }}/site-packages/alfetcher/cache
         key: ${{ env.anilist-cache }}
         restore-keys: |
           ${{ env.anilist-cache }}
@@ -74,7 +81,7 @@ jobs:
     - name: Save Cache
       uses: actions/cache/save@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/alfetcher/cache
+        path: /opt/hostedtoolcache/Python/${{ steps.python_version.outputs.full_version }}/x64/lib/python${{ steps.python_version.outputs.major_version }}/site-packages/alfetcher/cache
         key: ${{ env.anilist-cache }}
     - name: Check torrent links
       run: python torrent_verification.py
