--- a/.github/workflows/conv_cache.yml
+++ b/.github/workflows/conv_cache.yml
@@ -24,11 +24,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install alfetcher
+    - name: Determine Python version
+      id: python_version
+      run: |
+        full_version=$(python --version | cut -d' ' -f2)
+        major_version=$(echo $full_version | grep -oE '^[^.]+.[^.]+')
+        echo "::set-output name=full_version::$full_version"
+        echo "::set-output name=major_version::$major_version"
     - name: Download cache and extract it to appropriate dir
       shell: bash
       run: |
         curl -o cache.zip ${{ vars.CACHE_URL }}
-        find /opt/hostedtoolcache/Python/*/x64/lib/ -maxdepth 2 -mindepth 2 -type d -name "site-packages" -exec sh -c 'unzip cache.zip -d "$1/alfetcher/"' _ {} \;
+        unzip cache.zip -d /opt/hostedtoolcache/Python/${{ steps.python_version.outputs.full_version }}/x64/lib/python${{ steps.python_version.outputs.major_version }}/site-packages/alfetcher/cache
     - name: Delete Previous Cache
       continue-on-error: true
       run: |
@@ -39,5 +46,5 @@ jobs:
     - name: Save Cache
       uses: actions/cache/save@v3
       with:
-        path: /opt/hostedtoolcache/Python/3.12.2/x64/lib/python3.12/site-packages/alfetcher/cache
+        path: /opt/hostedtoolcache/Python/${{ steps.python_version.outputs.full_version }}/x64/lib/python${{ steps.python_version.outputs.major_version }}/site-packages/alfetcher/cache
         key: ${{ env.cache-key }}
