--- a/.github/workflows/update_database.yml
+++ b/.github/workflows/update_database.yml
@@ -71,6 +71,7 @@ jobs:
       continue-on-error: true
       run: git push
     - name: Check torrent links
+      continue-on-error: true
       run: python torrent_verification.py
     - name: Delete Previous Cache
       if: ${{ steps.anilist-restore.outputs.cache-hit }}
