dont check torrent links in the main action
we have a separate action for that

--- a/.github/workflows/check_torrents.yml
+++ b/.github/workflows/check_torrents.yml
@@ -1,6 +1,9 @@
 name: Check torrents
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: ['Update SubsPlease database']
+    types: [completed]
 
 permissions:
   contents: write
